--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "<h1>This is a Backend of File Upload App.</h1>",
   "main": "index.js",
   "scripts": {
+    "start":"node server.js",
     "dev": "nodemon server.js"
   },
   "keywords": [],
