--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "description": "<h1>This is a Backend of File Upload App.</h1>",
   "main": "index.js",
   "scripts": {
-    "start":"node server.js",
+    "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cloudinary": "^2.6.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-fileupload": "^1.5.1",
     "mongoose": "^8.13.0",
     "nodemon": "^3.1.9"
   }
