--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.21.2",
     "express-fileupload": "^1.5.1",
     "mongoose": "^8.13.0",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9"
   }
 }
